Finished the Agents routes.
Finished all CRUD for Agents. Commented out the routes.use with the htmlfile const which was provoking me to get an html each time I would try out an endpoint.
